[gd_scene load_steps=7 format=2]

[ext_resource path="res://EnemyTank.gd" type="Script" id=1]
[ext_resource path="res://Sprites/tankBody_huge.png" type="Texture" id=2]
[ext_resource path="res://Sprites/specialBarrel2.png" type="Texture" id=3]
[ext_resource path="res://Floaty.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 300.0

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 18, 14.5 )

[node name="EnemyTank" type="KinematicBody2D" groups=[
"Tanks",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Linear", "Transform", "collision" ]
enemy_group = ""
speed = 125
turn_rate = 0.025
nav_path = null
goal_radius = 1000
draw_lasers = true
shot_precision = 0.05

[node name="Visibility" type="Area2D" parent="." index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Visibility" index="0"]

shape = SubResource( 1 )

[node name="Body" type="Sprite" parent="." index="1"]

rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

shape = SubResource( 2 )

[node name="ShotTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="Turret" type="Node2D" parent="." index="4"]

_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="Turret" index="0"]

position = Vector2( -4, -7.78829e-07 )
rotation = -1.5708
texture = ExtResource( 3 )
offset = Vector2( 0, 10 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Floaty" type="Node2D" parent="." index="5"]

visible = false
script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Label" type="Label" parent="Floaty" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -20.0
margin_top = 18.0
margin_right = 20.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="body_entered" from="Visibility" to="." method="_on_Visibility_body_entered"]

[connection signal="body_exited" from="Visibility" to="." method="_on_Visibility_body_exited"]

[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]


